--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-ATLAS_URI = "mongodb+srv://john:john123@cluster0.hf3u6g5.mongodb.net/?retryWrites=true&w=majority"
+ATLAS_URI = "mongodb+srv://john:john123@cluster0.hf3u6g5.mongodb.net/?retryWrites=true&w=majority";
 PORT = 3000;
