--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-ATLAS_URI = "mongodb+srv://john:john123@cluster0.hf3u6g5.mongodb.net/?retryWrites=true&w=majority"
-PORT = 3000;
+ATLAS_URI = mongodb+srv://john:john123@cluster0.hf3u6g5.mongodb.net/?retryWrites=true&w=majority
+PORT = 8080
 JWTPRIVATEKEY = KING
 SALT = 10
